src/Fydar.Dev.WebApp/Components/Blocks/Cards/Card.razor.css
/* Cards */
.card {
    position: relative;
    display: flex;
    flex-direction: column;
    text-decoration: none;
    transition: box-shadow 0.15s;
    min-width: 0;
    --border-top-left-radius: 0px;
    --border-top-right-radius: 0px;
    --border-bottom-left-radius: 0px;
    --border-bottom-right-radius: 0px;
}

    .card a.card-link {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        font-size: 0;
        color: transparent;
    }

    /* Containers */
    .card ::deep .card-container {
        padding: 1.5rem 16px 1.5rem 16px;
        border-bottom-left-radius: var(--border-bottom-left-radius);
        border-bottom-right-radius: var(--border-bottom-right-radius);
    }

        .card ::deep .card-container .pill-cloud {
            margin-top: 0.75rem;
        }

    .card ::deep.card-button {
        padding: 1rem;
    }

        .card ::deep.card-button h3 {
            margin: 0;
        }

        .card ::deep.card-button .card-keyicon {
            width: 28px;
            height: 28px;
            min-width: 28px;
            padding: 0px 8px 0px 0px;
        }

    /* Key icons */
    .card ::deep.card-keyicon {
        width: 24px;
        height: 24px;
        min-width: 24px;
        padding: 2px 0.825rem 2px 2px;
        color: white;
        transition: filter 0.15s ease-in-out;
        align-self: center;
        pointer-events: none;
    }

    .card:has(> a:hover) ::deep.card-keyicon,
    .card:has(> a:focus) ::deep.card-keyicon {
        filter: drop-shadow(0 0 1px #ffffff60) drop-shadow(0 0 6px var(--palette-primary-color));
    }

    /* Card headers */
    .card ::deep.card-header {
        flex-grow: 0;
        padding: 0;
        margin: 0 0 0 0;
        font-size: 1.4375rem;
        font-weight: 350;
        letter-spacing: 1px;
        color: var(--color-text-primary);
        font-feature-settings: "ss03" 1;
        line-height: 1.25;
        pointer-events: none;
    }

        .card ::deep.card-header span.subtle {
            font-size: 1.4375rem;
            color: #ffffffa0;
            font-weight: 300;
            letter-spacing: 1.5px;
        }

    .card ::deep.card-description {
        flex-grow: 1;
        padding: 0;
        margin: 0;
        padding: 0;
        margin-top: 0.75rem;
        font-size: 17px;
        line-height: 1.45;
        letter-spacing: 0.075px;
        text-align: left;
        color: #9b9b9b;
        font-size: 1rem;
        font-weight: 400;
        pointer-events: none;
    }

        .card ::deep.card-description b {
            font-weight: 500;
            color: #aaaaaa;
        }

    .card ::deep picture {
        position: relative;
        width: 100%;
        padding-top: 75%;
        margin-bottom: -12px;
        pointer-events: none;
    }

    /* Card images */
    .card ::deep.card-image {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        object-fit: cover;
        overflow: hidden;
        opacity: 0.25;
        filter: grayscale(1);
        z-index: -1;
        mask: linear-gradient(to top, #ffffff00 0px, #ffffffad 24px, #ffffff 48px, #ffffff);
        pointer-events: none;
    }

    .card > ::deep .card-image:first-child,
    .card > ::deep picture:first-child .card-image {
        border-top-left-radius: calc(var(--border-top-left-radius) + 0.75px);
        border-top-right-radius: calc(var(--border-top-right-radius) + 0.75px);
    }

    .card > ::deep .card-image:last-child,
    .card > ::deep picture:last-child .card-image {
        border-bottom-left-radius: calc(var(--border-bottom-left-radius) + 0.75px);
        border-bottom-right-radius: calc(var(--border-bottom-right-radius) + 0.75px);
    }

    /* Glow */
    .card .card-outerglow {
        --glow-distance: 40px;
        pointer-events: none;
    }

        .card .card-outerglow .card-outerglow-tl,
        .card .card-outerglow .card-outerglow-t,
        .card .card-outerglow .card-outerglow-tr,
        .card .card-outerglow .card-outerglow-ml,
        .card .card-outerglow .card-outerglow-m,
        .card .card-outerglow .card-outerglow-mr,
        .card .card-outerglow .card-outerglow-bl,
        .card .card-outerglow .card-outerglow-b,
        .card .card-outerglow .card-outerglow-br {
            position: absolute;
            background: radial-gradient(500px 500px at var(--pointer-fixed), hsl(var(--palette-primary-hue), 100%, 50%, 0.25) 0, hsl(var(--palette-primary-hue), 100%, 50%, 0) 100%);
            background-attachment: fixed;
        }

        /* Corners */
        .card .card-outerglow .card-outerglow-tl {
            width: calc(var(--glow-distance) + var(--border-top-left-radius));
            height: calc(var(--glow-distance) + var(--border-top-left-radius));
            top: calc(var(--glow-distance) * -1);
            left: calc(var(--glow-distance) * -1);
            mask: radial-gradient(circle at bottom right, transparent var(--border-top-left-radius), white var(--border-top-left-radius), #5555 calc(var(--border-top-left-radius) + (var(--glow-distance) * 0.5)), transparent calc(var(--border-top-left-radius) + var(--glow-distance)));
        }

        .card .card-outerglow .card-outerglow-tr {
            width: calc(var(--glow-distance) + var(--border-top-right-radius));
            height: calc(var(--glow-distance) + var(--border-top-right-radius));
            top: calc(var(--glow-distance) * -1);
            right: calc(var(--glow-distance) * -1);
            mask: radial-gradient(circle at bottom left, transparent var(--border-top-right-radius), white var(--border-top-right-radius), #5555 calc(var(--border-top-right-radius) + (var(--glow-distance) * 0.5)), transparent calc(var(--border-top-right-radius) + var(--glow-distance)));
        }

        .card .card-outerglow .card-outerglow-bl {
            width: calc(var(--glow-distance) + var(--border-bottom-left-radius));
            height: calc(var(--glow-distance) + var(--border-bottom-left-radius));
            bottom: calc(var(--glow-distance) * -1);
            left: calc(var(--glow-distance) * -1);
            mask: radial-gradient(circle at top right, transparent var(--border-bottom-left-radius), white var(--border-bottom-left-radius), #5555 calc(var(--border-bottom-left-radius) + (var(--glow-distance) * 0.5)), transparent calc(var(--border-bottom-left-radius) + var(--glow-distance)));
        }

        .card .card-outerglow .card-outerglow-br {
            width: calc(var(--glow-distance) + var(--border-bottom-right-radius));
            height: calc(var(--glow-distance) + var(--border-bottom-right-radius));
            bottom: calc(var(--glow-distance) * -1);
            right: calc(var(--glow-distance) * -1);
            mask: radial-gradient(circle at top left, transparent var(--border-bottom-right-radius), white var(--border-bottom-right-radius), #5555 calc(var(--border-bottom-right-radius) + (var(--glow-distance) * 0.5)), transparent calc(var(--border-bottom-right-radius) + var(--glow-distance)));
        }

        /* Edges */
        .card .card-outerglow .card-outerglow-ml {
            top: var(--border-top-left-radius);
            bottom: var(--border-bottom-left-radius);
            left: calc(var(--glow-distance) * -1);
            width: var(--glow-distance);
            mask: linear-gradient(to left, white, #5555 50%, transparent);
        }

        .card .card-outerglow .card-outerglow-mr {
            top: var(--border-top-right-radius);
            bottom: var(--border-bottom-right-radius);
            right: calc(var(--glow-distance) * -1);
            width: var(--glow-distance);
            mask: linear-gradient(to right, white, #5555 50%, transparent);
        }

        .card .card-outerglow .card-outerglow-t {
            top: calc(var(--glow-distance) * -1);
            left: var(--border-top-left-radius);
            right: var(--border-top-right-radius);
            height: var(--glow-distance);
            mask: linear-gradient(to top, white, #5555 50%, transparent);
        }

        .card .card-outerglow .card-outerglow-b {
            bottom: calc(var(--glow-distance) * -1);
            left: var(--border-bottom-left-radius);
            right: var(--border-bottom-right-radius);
            height: var(--glow-distance);
            mask: linear-gradient(to bottom, white, #5555 50%, transparent);
        }

    /* Overlapping Effects */
    .card::before,
    .card::after,
    .card .card-hover::after {
        content: '';
        position: absolute;
        top: -1px;
        bottom: -1px;
        left: -1px;
        right: -1px;
        padding: 1.75px;
        box-sizing: border-box;
        pointer-events: none;
        border-top-left-radius: var(--border-top-left-radius);
        border-top-right-radius: var(--border-top-right-radius);
        border-bottom-left-radius: var(--border-bottom-left-radius);
        border-bottom-right-radius: var(--border-bottom-right-radius);
    }

    .card::before {
        border: 2px solid #ffffff14;
    }

    .card::after {
        background: radial-gradient(250px 250px at var(--pointer-fixed), var(--palette-primary-color) 0, transparent 100%);
        background-attachment: fixed;
    }

    .card .card-hover::after {
        background: radial-gradient(350px 350px at var(--pointer-fixed), #ffffff 0, var(--palette-primary-color) 40%, #3e3934 100%);
        background-attachment: fixed;
    }

    .card::after,
    .card .card-hover::after {
        mask: linear-gradient(#ffffff 0 0) content-box, linear-gradient(#ffffff 0 0);
        -webkit-mask: linear-gradient(#ffffff 0 0) content-box, linear-gradient(#ffffff 0 0);
        mask-composite: exclude;
        -webkit-mask-composite: xor;
    }

    .card .card-hover {
        opacity: 0;
        transition: opacity 0.15s ease-in-out;
        pointer-events: none;
        z-index: 1;
    }

    .card:hover .card-hover {
        opacity: 1;
    }

    .card.pointer-none::after,
    .card.pointer-none .card-hover::after {
        opacity: 0;
    }

    .card a:focus-visible {
        outline: 0;
    }

    .card:has(> a:focus-visible) .card-hover {
        opacity: 1;
    }

    .card:has(> a:focus-visible).pointer-none .card::after,
    .card:has(> a:focus-visible).pointer-none .card-hover::after {
        opacity: 1;
    }

    .card:has(> a:focus-visible) .card-hover::after {
        background: radial-gradient(350px 350px at var(--pointer-fixed), #ffffff 0, var(--palette-primary-color) 40%);
        background-attachment: fixed;
    }

    .card:has(> a:focus-visible) .card-outerglow .card-outerglow-tl,
    .card:has(> a:focus-visible) .card-outerglow .card-outerglow-t,
    .card:has(> a:focus-visible) .card-outerglow .card-outerglow-tr,
    .card:has(> a:focus-visible) .card-outerglow .card-outerglow-ml,
    .card:has(> a:focus-visible) .card-outerglow .card-outerglow-m,
    .card:has(> a:focus-visible) .card-outerglow .card-outerglow-mr,
    .card:has(> a:focus-visible) .card-outerglow .card-outerglow-bl,
    .card:has(> a:focus-visible) .card-outerglow .card-outerglow-b,
    .card:has(> a:focus-visible) .card-outerglow .card-outerglow-br {
        background: hsl(var(--palette-primary-hue), 100%, 50%, 0.25);
    }

